--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -15,7 +15,7 @@
 
 set -g status-position top
 set -g status-justify centre
-set -g status-bg default
+set -g status-style bg=default
 set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
