started using COC temporarily
ported qalam from vimscript to lua

new

before coc

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -30,8 +30,8 @@
             <!-- <family>Bangla</family> -->
 
             <!-- Emojis-->
-            <family>Joy Pixels</family>
             <family>Noto Color Emoji</family>
+            <!-- <family>Joy Pixels</family> -->
 
             <!-- Glyphs -->
             <!-- <family>Hack Nerd Font Mono</family> -->
@@ -45,7 +45,8 @@
         <family>sans</family>
         <prefer>
             <family>Ubuntu</family>
-            <family>Joy Pixels</family>
+            <family>Noto Color Emoji</family>
+            <!-- <family>Joy Pixels</family> -->
             <!-- <family>Noto Sans</family> -->
             <!-- <family>Dejavu Sans</family> -->
             <!-- <family>Dejavu Sans</family> -->
@@ -56,7 +57,7 @@
         <family>serif</family>
         <prefer>
             <family>Linux Biolinum</family>
-            <family>Joy Pixels</family>
+            <family>Noto Color Emoji</family>
             <!-- <family>Noto Serif</family> -->
             <!-- <family>Linux Libertine</family> -->
             <!-- <family>Liberation Serif</family> -->
@@ -67,11 +68,11 @@
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>SF Mono</family>
+            <family>Jetbrains Mono</family>
+            <!-- <family>SF Mono</family> -->
             <!-- <family>Iosevka</family> -->
             <!-- <family>Cascadia Mono</family> -->
             <!-- <family>Cascadia Code</family> -->
-            <!-- <family>Jetbrains Mono</family> -->
             <!-- <family>Fira Code</family> -->
             <!-- <family>Dejavu Sans Mono</family> -->
             <!-- <family>Roboto Mono</family> -->
@@ -84,8 +85,8 @@
             <!-- <family>Noto Sans Mono</family> -->
 
             <!-- Emojis-->
-            <family>Joy Pixels</family>
             <family>Noto Color Emoji</family>
+            <!-- <family>Joy Pixels</family> -->
 
             <!-- Glyphs -->
             <!-- <family>Hack Nerd Font Mono</family> -->
