stopped using bolt
new

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -90,8 +90,11 @@ set -g prefix M-Space
 #               Windows
 #---------------------------------------
 
+# bind -n M-o new-window -c "#{pane_current_path}" 
+
 bind -n M-o new-window -c "#{pane_current_path}" \; \
-        send "bolt --search" Enter
+        send "xdotool sleep 0.2 key quoteright && faint" Enter
+        # send "bolt --search" Enter
 bind -n M-Enter new-window -c "#{pane_current_path}"
 
 # Navigation
