added intel audio bug fix
new

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -55,8 +55,8 @@ set -g renumber-windows on
 set-hook -g session-created "run tmux-renumber-sessions"
 set-hook -g session-closed "run tmux-renumber-sessions"
 
-# Auto Center Pane
-set-hook -g pane-focus-in 'run tmux-center-pane'
+# # Auto Center Pane
+# set-hook -g pane-focus-in 'run tmux-center-pane'
 
 # Show bells in window titles.
 set -g window-status-bell-style fg=yellow,bold,underscore
@@ -108,8 +108,8 @@ bind -n M-J swap-window -d -t :-
 # Rename
 bind -n M-i command -I "#W" "rename-window -- '%%'"
 
-# Complement tmux-center-pane; Dynamically kills pane
-bind -n M-';' run '{ [ "$(tmux list-panes | wc -l)" -gt 3 ] && tmux kill-pane; } || tmux kill-window'
+# # Complement tmux-center-pane; Dynamically kills pane
+# bind -n M-';' run '{ [ "$(tmux list-panes | wc -l)" -gt 3 ] && tmux kill-pane; } || tmux kill-window'
 
 #---------------------------------------
 #               Sessions
@@ -215,10 +215,10 @@ bind -n M-m resize-pane -Z
 #         select-layout main-vertical \; \
 #         send "clear" Enter
 
-# # Kill
-# bind -n M-';' kill-pane \; \
-#         select-layout main-vertical \; \
-#         select-pane -t :.1
+# Kill
+bind -n M-';' kill-pane \; \
+        select-layout main-vertical \; \
+        select-pane -t :.1
 
 # # Swap
 # bind -r i swap-pane -d -t :.2 \; swap-pane -d -t :.1
