--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -68,14 +68,14 @@
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>Jetbrains Mono</family>
+            <family>Roboto Mono</family>
+            <!-- <family>Dejavu Sans Mono</family> -->
             <!-- <family>SF Mono</family> -->
+            <!-- <family>Jetbrains Mono</family> -->
             <!-- <family>Iosevka</family> -->
             <!-- <family>Cascadia Mono</family> -->
             <!-- <family>Cascadia Code</family> -->
             <!-- <family>Fira Code</family> -->
-            <!-- <family>Dejavu Sans Mono</family> -->
-            <!-- <family>Roboto Mono</family> -->
             <!-- <family>Liberation Mono</family> -->
             <!-- <family>Code New Roman</family> -->
             <!-- <family>PT Mono</family> -->
