made some minor tweaks

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -68,9 +68,9 @@
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>Roboto Mono</family>
+            <!-- <family>Roboto Mono</family> -->
             <!-- <family>Dejavu Sans Mono</family> -->
-            <!-- <family>SF Mono</family> -->
+            <family>SF Mono</family>
             <!-- <family>Jetbrains Mono</family> -->
             <!-- <family>Iosevka</family> -->
             <!-- <family>Cascadia Mono</family> -->
