--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -14,14 +14,17 @@
 #=======================================
 
 set -g status-position top
-set -g status-justify centre
+# set -g status-justify centre
+set -g status-justify left
 set -g status-style bg=default
 set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
 
-set-option -g status-left '💻 #[fg=magenta]#S                    '
-set -g status-right '                                #(date +"🕰  %H:%M")'
+# set-option -g status-left '💻 #[fg=magenta]#S                    '
+# set -g status-right '                                #(date +"🕰  %H:%M")'
+set-option -g status-left '💻 #[fg=magenta]#S '
+set -g status-right ''
 
 
 #---------------------------------------
