revitilized nvim config
revamped nvim configs

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -96,7 +96,7 @@ set -g prefix M-Space
 # bind -n M-o new-window -c "#{pane_current_path}" 
 
 bind -n M-o new-window -c "#{pane_current_path}" \; \
-        send "xdotool sleep 0.2 key quoteright && faint" Enter
+        send "xdotool sleep 0.1 key quoteright && faint" Enter
         # send "bolt --search" Enter
 bind -n M-Enter new-window -c "#{pane_current_path}"
 
@@ -219,9 +219,10 @@ bind -n M-m resize-pane -Z
 #         send "clear" Enter
 
 # Kill
-bind -n M-';' kill-pane \; \
-        select-layout main-vertical \; \
-        select-pane -t :.1
+bind -n M-';' kill-pane
+#  bind -n M-';' kill-pane \; \
+        #  select-layout main-vertical \; \
+        #  select-pane -t :.1
 
 # # Swap
 # bind -r i swap-pane -d -t :.2 \; swap-pane -d -t :.1
