updated the install script

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -119,7 +119,8 @@ bind -n M-i command -I "#W" "rename-window -- '%%'"
 #---------------------------------------
 
 bind -n M-l switch-client -n
-bind -n M-h switch-client -p
+#  bind -n M-h switch-client -p
+bind -n M-h command -I "#S" "rename-session -- '%%'"
 
 # Rename
 bind -n M-I command -I "#S" "rename-session -- '%%'"
