--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -95,31 +95,35 @@
             <!-- <family>Inconsolata for Powerline</family> -->
 
             <!-- Arabic Fonts -->
-            <family>Kawkab Mono</family>
+            <family>Thabit</family>
+            <!-- <family>Kawkab Mono</family> -->
             <!-- <family>UKIJ Teng</family> -->
             <!-- <family>UKIJ Mono Keng</family> -->
             <!-- <family>UKIJ Mono Tar</family> -->
             <!-- <family>FreeFarsi Monospace</family> -->
-            <!-- <family>Thabit</family> -->
+
+            <!-- Bengali Fonts -->
+            <family>Mitra Mono</family>
+
         </prefer>
     </alias>
 
-   <!-- <!-1- Disable Bitmap Fonts -1-> -->
-   <!-- <match target="font"> -->
-   <!--     <edit name="embeddedbitmap" mode="assign"> -->
-   <!--          <bool>false</bool> -->
-   <!--      </edit> -->
-   <!--  </match> -->
+    <!-- <!-1- Disable Bitmap Fonts -1-> -->
+    <!-- <match target="font"> -->
+    <!--     <edit name="embeddedbitmap" mode="assign"> -->
+    <!--          <bool>false</bool> -->
+    <!--      </edit> -->
+    <!--  </match> -->
 
-   <!-- <!-1- Firfox Emoji Fix -1-> -->
-   <!-- <match> -->
-   <!--      <test name="prgname"> -->
-   <!--          <string>firefox</string> -->
-   <!--      </test> -->
-   <!--      <edit name="family" mode="prepend" binding="weak"> -->
-   <!--          <string>Noto Color Emoji</string> -->
-   <!--      </edit> -->
-   <!-- </match> -->
+    <!-- <!-1- Firfox Emoji Fix -1-> -->
+    <!-- <match> -->
+    <!--      <test name="prgname"> -->
+    <!--          <string>firefox</string> -->
+    <!--      </test> -->
+    <!--      <edit name="family" mode="prepend" binding="weak"> -->
+    <!--          <string>Noto Color Emoji</string> -->
+    <!--      </edit> -->
+    <!-- </match> -->
 
     <!-- <!-1- Scale font size -1-> -->
     <!-- <match target="font"> -->
@@ -129,6 +133,20 @@
     <!--     <edit name="pixelsize" mode="assign"> -->
     <!--         <times><name>pixelsize</name>, <double>1.5</double></times> -->
     <!--     </edit> -->
+    <!-- </match> -->
+
+
+    <!-- <match target="font"> -->
+    <!-- <test name="family"> -->
+    <!-- <string>Thabit</string> -->
+    <!-- </test> -->
+    <!-- <edit name="pixelsize" mode="assign"> -->
+    <!-- <times> -->
+    <!-- <name>pixelsize</name> -->
+    <!-- , -->
+    <!-- <double>1.5</double> -->
+    <!-- </times> -->
+    <!-- </edit> -->
     <!-- </match> -->
 
 </fontconfig>
