--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -78,6 +78,10 @@ setw -g window-status-current-format \
 #               Exp
 #---------------------------------------
 
+# Undercurl
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 # set -g status-right '                                       '
 # set -g status-right '              #(panel -d)'
 # set -g status-right '                          #(echo $USER)@#h'
@@ -109,7 +113,7 @@ bind -n M-K swap-window -d -t :+
 bind -n M-J swap-window -d -t :-
 
 # Rename
-bind -n M-i command -I "#W" "rename-window -- '%%'"
+bind -n M-N command -I "#W" "rename-window -- '%%'"
 
 # # Complement tmux-center-pane; Dynamically kills pane
 # bind -n M-';' run '{ [ "$(tmux list-panes | wc -l)" -gt 3 ] && tmux kill-pane; } || tmux kill-window'
@@ -122,7 +126,7 @@ bind -n M-l switch-client -n
 bind -n M-h switch-client -p
 
 # Rename
-bind -n M-I command -I "#S" "rename-session -- '%%'"
+bind -n M-n command -I "#S" "rename-session -- '%%'"
 
 # List
 bind l choose-tree
@@ -323,7 +327,8 @@ bind -n M-';' kill-pane
 #                              Settings
 #===============================================================================
 # Set coorect $TERM value
-set -g default-terminal "tmux-256color"
+set -g default-terminal "${TERM}"
+#  set -g default-terminal "tmux-256color"
 # set -g default-terminal "alacritty"
 
 # fix delay time between tmux & vim
