--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -81,6 +81,7 @@ setw -g window-status-current-format \
 # Undercurl
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set -as terminal-overrides ',${TERM}:RGB'
 
 # set -g status-right '                                       '
 # set -g status-right '              #(panel -d)'
@@ -329,7 +330,9 @@ bind -n M-';' kill-pane
 # Set coorect $TERM value
 set -g default-terminal "${TERM}"
 #  set -g default-terminal "tmux-256color"
-# set -g default-terminal "alacritty"
+#  set -g default-terminal "screen-256color"
+#  set -g default-terminal "tmux-256color"
+#  set -g default-terminal "alacritty"
 
 # fix delay time between tmux & vim
 set -sg escape-time 0
