--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -186,7 +186,7 @@ bind r new-window -c "#{pane_current_path}" \; join-pane \; last-pane \; kill-pa
 
 # Misc
 bind h split-window -b -h -c "#{pane_current_path}"
-bind v split-window -b -c "#{pane_current_path}"
+bind H split-window -b -c "#{pane_current_path}"
 
 # Navigation
 bind -n M-. select-pane -Z -t :.+ \; display-panes
