--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -191,8 +191,8 @@ bind H split-window -b -c "#{pane_current_path}"
 # Navigation
 bind -n M-. select-pane -Z -t :.+ \; display-panes
 bind -n M-, select-pane -Z -t :.- \; display-panes
-# bind -n M-> rotate-window -Z -U \; display-panes
-# bind -n M-< rotate-window -Z -D \; display-panes
+bind -n M-> rotate-window -Z -U \; display-panes
+bind -n M-< rotate-window -Z -D \; display-panes
 
 # # Resize
 # bind -n h resize-pane -L
