removed cathy from faint shortcut

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -185,8 +185,8 @@ bind m select-pane -m
 bind r new-window -c "#{pane_current_path}" \; join-pane \; last-pane \; kill-pane
 
 # Misc
-bind v split-window -b -c "#{pane_current_path}"
 bind h split-window -b -h -c "#{pane_current_path}"
+bind H split-window -b -c "#{pane_current_path}"
 
 # Navigation
 bind -n M-. select-pane -Z -t :.+ \; display-panes
