--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -28,6 +28,8 @@ Alt+k add video-pan-y  0.1
 Alt+l add video-pan-y -0.1
 
 r ab-loop
+#  R cycle-values loop-file "inf" "no"    # toggle infinite looping
+R cycle-values loop-playlist yes no
 
 p show_text ${playlist}
 
@@ -201,7 +203,6 @@ s cycle sub-visibility
 #CLOSE_WIN {encode} quit 4
 #E cycle edition                        # next edition
 #l ab-loop                              # Set/clear A-B loop points
-#L cycle-values loop-file "inf" "no"    # toggle infinite looping
 #ctrl+c quit 4
 #DEL script-binding osc/visibility      # cycle OSC display
 #ctrl+h cycle-values hwdec "auto" "no"  # cycle hardware decoding
