major zsh revisions

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -104,6 +104,7 @@
 
             <!-- Bengali Fonts -->
             <family>Mitra Mono</family>
+            <!-- <family>Shonar Bangla</family> -->
 
         </prefer>
     </alias>
