--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,7 +23,7 @@ set -g status-left-length 30
 
 # set-option -g status-left '💻 #[fg=magenta]#S                    '
 # set -g status-right '                                #(date +"🕰  %H:%M")'
-set-option -g status-left '💻 #[fg=magenta]#S '
+set-option -g status-left '📒 #[fg=magenta]#S '
 set -g status-right ''
 
 
@@ -338,8 +338,8 @@ set -g default-terminal "${TERM}"
 set -sg escape-time 0
 
 # default shell
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
+#  set -g default-command /bin/bash
+#  set -g default-shell /bin/bash
 
 # Needed as on tmux 1.9 and up (defaults to off).
 # Added in tmux commit c7a121cfc0137c907b7bfb.
@@ -350,7 +350,7 @@ set -g focus-events on
 set -w -g wrap-search off
 
 # Start a non-login shell
-set -g default-command "${SHELL}"
+#  set -g default-command "${SHELL}"
 
 # Prevents annoying activity popup
 set -g visual-activity off
