--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -338,8 +338,8 @@ set -g default-terminal "${TERM}"
 set -sg escape-time 0
 
 # default shell
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
+#  set -g default-command /bin/zsh
+#  set -g default-shell /bin/zsh
 
 # Needed as on tmux 1.9 and up (defaults to off).
 # Added in tmux commit c7a121cfc0137c907b7bfb.
