changed alacritty themes

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -70,8 +70,8 @@
         <prefer>
             <!-- <family>Roboto Mono</family> -->
             <!-- <family>Dejavu Sans Mono</family> -->
-            <family>Jetbrains Mono</family>
-            <!-- <family>SF Mono</family> -->
+            <!-- <family>Jetbrains Mono</family> -->
+            <family>SF Mono</family>
             <!-- <family>Iosevka</family> -->
             <!-- <family>Cascadia Mono</family> -->
             <!-- <family>Cascadia Code</family> -->
